--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,42 @@ body {
     transform: translateX(20%);
   }
 }
+.submit__success {
+  color: hsl(278deg, 68%, 11%);
+  text-align: center;
+  width: 35%;
+  margin: 25.6rem auto 0;
+  text-align: center;
+}
+@media (max-width: 30em) {
+  .submit__success {
+    width: 86%;
+    margin: 9.6rem auto 2.4rem;
+  }
+}
+.submit__success .icon__complete {
+  margin-bottom: 3.2rem;
+}
+.submit__success .btn__complete {
+  background-color: hsl(278deg, 68%, 11%);
+  color: hsl(0deg, 0%, 100%);
+  height: 5rem;
+  width: 100%;
+  border-radius: 0.8rem;
+  letter-spacing: 1.6px;
+  font-size: 1.8rem;
+}
+.submit__success .complete__heading {
+  text-transform: uppercase;
+  color: hsl(278deg, 68%, 11%);
+  font-weight: 500;
+  margin-bottom: 1.2rem;
+}
+.submit__success .complete__sub-heading {
+  color: hsl(270deg, 3%, 87%);
+  margin-bottom: 4rem;
+}
+
 .container {
   height: 100vh;
   width: 100%;
