--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,5 +7,6 @@
 @import "base/typography";
 @import "base/utilities";
 @import "components/card";
+@import "components/thank";
 @import "layout/grid";
 @import "pages/home";
